syntax = "proto3";

package ai.metathings.service.core;

import "google/protobuf/wrappers.proto";

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "unary_call.proto";

enum StreamMessageType {
	STREAM_MESSAGE_TYPE_UNKNOWN = 0;
	STREAM_MESSAGE_TYPE_SYSTEM = 1;
	STREAM_MESSAGE_TYPE_USER = 2;
}

message StreamErrorResponsePayload {
	string service_name = 1;
	string method_name = 2;
	string context = 3;
}

message StreamResponse {
	string session_id = 1;
	StreamMessageType message_type = 2;
	oneof payload {
		StreamErrorResponsePayload err = 3;
		UnaryCallResponsePayload unary_call = 4;
	}

}

message StreamRequest {
	google.protobuf.StringValue session_id = 1 [(validator.field) = {msg_exists: true}];
	StreamMessageType message_type = 2 [(validator.field) = {msg_exists: true}];
	oneof payload {
		UnaryCallRequestPayload unary_call = 3;
	};
}
